// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::assetSwitchPool1::[RemoteToLocalSwitchExecuted] 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::balances::[Transfer] 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Transfer",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 35000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4qPZ8fv6BjGoGKzfx5LtBFnEUp2b5Q5C1ErrjBNGmoFTLNHG",
    },
    "method": "Transfer",
    "section": "balances",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::messageQueue::[Processed] 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;
